Modif log Strava

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SECRET_KEY=T&q3RpnKuOJeD#
-STRAVA_CLIENT_ID=158867
-STRAVA_CLIENT_SECRET=5289a5cf0a295a96c19427ccb77c71f87b4faebc
-STRAVA_REDIRECT_URI=https://sport-lm3f.onrender.com/strava/callback
+SECRET_KEY="T&q3RpnKuOJeD#"
+STRAVA_CLIENT_ID="158867"
+STRAVA_CLIENT_SECRET="5289a5cf0a295a96c19427ccb77c71f87b4faebc"
+STRAVA_REDIRECT_URI="http://127.0.0.1:5000/strava/callback"
